- added favicon - fixed a few layout bugs, especially for mobile

--- a/src/main/resources/static/r/style/stylesheet.css
+++ b/src/main/resources/static/r/style/stylesheet.css
@@ -1,13 +1,43 @@
+/* NAVBAR */
+@media (max-width: 767px) {
+    .hide-xs {
+        display: none;
+    }
+
+    .navbar-brand {
+        padding-top: 0px;
+        padding-bottom: 0px;
+        height: 1px; /* it's not really 1px */
+    }
+}
+
 .navbar {
-    background-image: linear-gradient(to bottom, #337AB7 85%, rgba(255,255,255,0) 100%);
+    background-image: linear-gradient(to bottom, #337AB7 85%, rgba(255, 255, 255, 0) 100%);
     border-style: none;
     padding-bottom: 5px;
 }
 
+.navbar-collapse.collapse.in {
+    margin-bottom: 10px;
+}
+
+.navbar-collapse.collapse.in .btn {
+    margin-top: -2px;
+}
+
+.navbar-left {
+    margin-left: 10px;
+}
+
 .navbar.navbar-fixed-bottom {
-    background-image: linear-gradient(to top, #337AB7 85%, rgba(255,255,255,0) 100%);
+    background-image: linear-gradient(to top, #337AB7 85%, rgba(255, 255, 255, 0) 100%);
     border-style: none;
     padding-top: 5px;
+}
+/* END NAVBAR */
+
+#login input {
+    width: 8em;
 }
 
 .commentcorner {
@@ -64,7 +94,6 @@ span.tag {
 }
 
 body {
-    padding-top: 70px;
     padding-bottom: 70px;
     font-family: "PT Serif", serif;
 }
@@ -91,6 +120,12 @@ h1 {
 .locationsearch {
     margin-top: 40px;
     margin-bottom: 35px;
+
+    width: 70%;
+}
+
+.placesearch {
+    margin-top: 40px;
 
     width: 70%;
 }
@@ -193,13 +228,13 @@ h1 {
 .animate-repeat.ng-leave.ng-leave-active,
 .animate-repeat.ng-move,
 .animate-repeat.ng-enter {
-    opacity:0;
+    opacity: 0;
 }
 
 .animate-repeat.ng-leave,
 .animate-repeat.ng-move.ng-move-active,
 .animate-repeat.ng-enter.ng-enter-active {
-    opacity:1;
+    opacity: 1;
 }
 
 .result {
